--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-root-toast": "^3.4.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
