--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.1.2",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
